[KER-02] refactor: Order 도메인 리팩토링